--- a/relief-detail.html
+++ b/relief-detail.html
@@ -11,7 +11,7 @@
 
     <div class="form-container">
         <h2>Relief Detail</h2>
-        <form id="relief-form" action="#" method="post">
+        <form id="relief-form" action="#" method="post" autocomplete="off">
             <label for="lp-id">LP ID</label>
             <input type="text" id="lp-id" name="lp-id" placeholder="ex. BSP3637" required pattern=".{7,8}" title="LP ID must be like ex.BSP1234" oninput="this.value = this.value.toUpperCase().replace(/\s/g, '')">
             <div id="lp-name"></div> <!-- Placeholder for LP Name -->
