sutra-form.html

--- a/sutra-form.html
+++ b/sutra-form.html
@@ -55,7 +55,7 @@
             <label for="last-passed-station">LAST PASSED STATION CODE</label>
             <input type="text" id="last-passed-station" name="last-passed-station" required oninput="this.value = this.value.toUpperCase().replace(/[^A-Z]/g, '').slice(0, 4)">
 
-            <label for="ml-cic">ML/CIC</label>
+            <label for="ml-cic">TLC ML/CIC</label>
             <select id="ml-cic" name="ml-cic" required>
                 <option value="" disabled selected>SELECT</option>
                 <option value="ML">ML</option>
