--- a/relief-detail.html
+++ b/relief-detail.html
@@ -54,6 +54,7 @@
                 <option value="USL">USL</option>
                 <option value="NKJ">NKJ</option>
                 <option value="JSG">JSG</option>
+                <option value="SBP">SBP</option>
             </select>
 
             <input type="hidden" id="timestamp" name="timestamp"> <!-- Hidden Timestamp Field -->
